# nerf-rs

./: Cargo.toml  README.md  read_image.py
src/: cli.rs  dataset.rs  display.rs  image_loading.rs  input_transforms.rs  logging.rs  main.rs  mlp.rs  model.rs  model_dfdx.rs  model_tch.rs  ray_sampling.rs
