[package]
name = "nerf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
textplots = "0.6"
dfdx = "0.10.0"
vecmath = "1.0.0"
rand = "0.8.5"
load_image = "2"
minifb = "0.23"
image = "0.24.5"
tch = "0.13.0"
